--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Projet_Support_CodeBlocks.depend
 Projet_Support_CodeBlocks.layout
 bin/Debug/Projet_Support_CodeBlocks.exe
 Projet_Support_CodeBlocks.depend
+Projet_Support_CodeBlocks.layout
