--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ bin/Debug/Projet_Support_CodeBlocks.exe
 Projet_Support_CodeBlocks.depend
 Projet_Support_CodeBlocks.layout
 ./*.o
+obj/Debug/src/forms.o
+obj/Debug/src/forms.o
+obj/Debug/src/scene.o
+obj/Debug/src/forms.o
+obj/Debug/src/test_program.o
