resolved merge conflict

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ obj/Debug/src/test_program.o
 obj/Debug/src/terrain.o
 obj/Debug/src/scene.o
 obj/Debug/src/forms.o
+obj/Debug/src/forms.o
+obj/Debug/src/scene.o
+obj/Debug/src/terrain.o
