--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ obj/Debug/src/terrain.o
 bin/Debug/Projet_Support_CodeBlocks.exe
 obj/Debug/src/scene.o
 obj/Debug/src/forms.o
+obj/Debug/src/Balle.o
+obj/Debug/src/Balle.o
+obj/Debug/src/geometry.o
+obj/Debug/src/scene.o
+obj/Debug/src/terrain.o
+obj/Debug/src/test_program.o
