--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ bin/Debug/Projet_Support_CodeBlocks.exe
 Projet_Support_CodeBlocks.depend
 Projet_Support_CodeBlocks.layout
 ./*.o
-obj/Debug/src/*/o
+obj/Debug/src/*.o
 
 
 
