--- a/Projet_Support_CodeBlocks.cbp
+++ b/Projet_Support_CodeBlocks.cbp
@@ -14,6 +14,7 @@
 				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -23,6 +24,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -47,12 +49,14 @@
 		<Unit filename="include/animation.h" />
 		<Unit filename="include/forms.h" />
 		<Unit filename="include/geometry.h" />
+		<Unit filename="include/raquette.h" />
 		<Unit filename="include/scene.h" />
 		<Unit filename="include/terrain.h" />
 		<Unit filename="src/Balle.cpp" />
 		<Unit filename="src/animation.cpp" />
 		<Unit filename="src/forms.cpp" />
 		<Unit filename="src/geometry.cpp" />
+		<Unit filename="src/raquette.cpp" />
 		<Unit filename="src/scene.cpp" />
 		<Unit filename="src/terrain.cpp" />
 		<Unit filename="src/test_program.cpp" />
