code block updates

--- a/Projet_Support_CodeBlocks.cbp
+++ b/Projet_Support_CodeBlocks.cbp
@@ -47,6 +47,7 @@
 		</Linker>
 		<Unit filename="include/Balle.h" />
 		<Unit filename="include/animation.h" />
+		<Unit filename="include/camera.h" />
 		<Unit filename="include/forms.h" />
 		<Unit filename="include/geometry.h" />
 		<Unit filename="include/raquette.h" />
@@ -54,6 +55,7 @@
 		<Unit filename="include/terrain.h" />
 		<Unit filename="src/Balle.cpp" />
 		<Unit filename="src/animation.cpp" />
+		<Unit filename="src/camera.cpp" />
 		<Unit filename="src/forms.cpp" />
 		<Unit filename="src/geometry.cpp" />
 		<Unit filename="src/raquette.cpp" />
