--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,2 @@
-
-bin/Debug/Projet_Support_CodeBlocks.exe
-Projet_Support_CodeBlocks.depend
-Projet_Support_CodeBlocks.layout
-./*.o
-<<<<<<< HEAD
-obj/Debug/src/forms.o
-obj/Debug/src/forms.o
-obj/Debug/src/scene.o
-obj/Debug/src/forms.o
-obj/Debug/src/test_program.o
-obj/Debug/src/test_program.o
-obj/Debug/src/terrain.o
-obj/Debug/src/scene.o
-obj/Debug/src/forms.o
-obj/Debug/src/forms.o
-obj/Debug/src/scene.o
-obj/Debug/src/terrain.o
-bin/Debug/Projet_Support_CodeBlocks.exe
-obj/Debug/src/scene.o
-obj/Debug/src/forms.o
-bin/Debug/Projet_Support_CodeBlocks.exe
-obj/Debug/src/forms.o
-obj/Debug/src/scene.o
-obj/Debug/src/terrain.o
-obj/Debug/src/test_program.o
-<<<<<<< HEAD
-obj/Debug/src/Balle.o
-*.o
-bin/Debug/Projet_Support_CodeBlocks.exe
-*.o
-*.exe
-=======
-obj/Debug/src/*.o
-
-
-
->>>>>>> cc5881a7b939b20c8f88b77582107f764796c204
-=======
->>>>>>> parent of 72b304a... Mouvement Balle
-*.o
-*.exe
-*.layout
+**/*.o
+**/*.exe
